# derm_pipeline

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  ClassificationPatchSamplerDataset.py  Dockerfile  Makefile  ObjDetecPatchSamplerDataset.py  PatchExtractor.py  PatchSamplerDataset.py  README.md  check_no_leak_train_test.py  coco_format.py  coco_utils.py  common.mk  common.py  concurrency.py  correct_labels.py  crypto.py  dataset_sample.py  distributed_launch.py  entropy.py  full_img_label_to_patch_coco_label.py  hslu_demo.py  hslu_to_coco_json.py  hslu_to_coco_json_mono_process.py  image_mask_viewer.py  img_histogram.py  img_patch_sampler.py  img_resolution.py  img_utils.py  infer_images.py  infer_images_classif.py  infer_images_obj_detec.py  infer_images_segm.py  net_viz.py  patch_coco_label_to_full_img_label.py  preprocessor.py  pyproject.toml  (+8 more)
classification/: classification_utils.py  classification_with_image_and_metadata.py  infer_images_classif.py  train_classif.py  train_classification.py
crop-utils/: cropall.py
eog-plugin/: location.txt
general/: PatchExtractor.py  check_data_integrity.py  check_no_leak_train_test.py  common.py  common_img.py  common_plot.py  concurrency.py  crypto.py  dataset_sample.py  distributed_launch.py  entropy.py  img_resolution.py  img_utils.py  net_viz.py  preprocessor.py  pth_to_pkl.py  split_dataset.py  train_utils.py  train_utils_img.py
make-template/: common.mk  docker.mk
object_detection/: coco_format.py  coco_format_patch_to_full_img.py  full_img_label_to_patch_coco_label.py  hslu_to_coco_json.py  (+4 more)
(+87 files in other folders)
